Añadir archivo README.md con descripción del proyecto

--- a/Dash_implementacion.ipynb
+++ b/Dash_implementacion.ipynb
@@ -22,37 +22,17 @@
     }
    ],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import PyPDF2 as pdf\n",
     "from IPython.display import display\n",
     "from datetime import datetime, timedelta\n",
-    "from dash import dcc, html\n",
-    "import dash\n",
-    "from dash.dependencies import Input, Output, State\n",
-    "from dash import dcc, html, Input, Output\n",
+    "from dash import dcc, html, Dash, Input, Output, State, ALL\n",
     "import plotly.graph_objs as go\n",
     "import plotly.express as px\n",
-    "from dash import ALL\n",
-    "import base64\n",
-    "import io"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import dash\n",
-    "from dash import html, dcc, Dash, Input, Output, State, ALL\n",
     "import base64\n",
     "import io\n",
-    "import pandas as pd\n",
-    "import plotly.express as px\n",
     "import os\n",
-    "import tempfile"
+    "import tempfile\n"
    ]
   },
   {
@@ -64,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,26 +75,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
     "url = {\n",
-    "    \"Retirados\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/OneDrive_1_2-14-2024/Data empleado/12. Empleados Diciembre 2023 Talento.xlsx\", \n",
-    "    \"Auxilios\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/OneDrive_1_2-14-2024/Compensación/Prestamos y Auxilios/Prestamos & Auxilios 2023.xlsx\",  \n",
-    "    \"Prestamos\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/OneDrive_1_2-14-2024/Compensación/Prestamos y Auxilios/Prestamos & Auxilios 2023.xlsx\", \n",
-    "    \"Empleado_Noviembre_2023_Activo\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/OneDrive_1_2-14-2024/Data empleado/11. Empleados Noviembre 2023 Talento.xlsx\", \n",
-    "    \"Empleado_Diciembre_2023_Consolidado\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/OneDrive_1_2-14-2024/Data empleado/12. Empleados Diciembre 2023 Talento.xlsx\", \n",
-    "    \"Empleado_Diciembre_2023_Activo\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/OneDrive_1_2-14-2024/Data empleado/12. Empleados Diciembre 2023 Talento.xlsx\",\n",
-    "    \"Rotacion_Interna_Acumulado\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/OneDrive_1_2-14-2024/Data empleado/ROTACION INTERNA ACUMULADA.xlsx\", \n",
-    "    \"Finalizacion_Curso\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/OneDrive_1_2-14-2024/Desarrollo y talento humano/Formación/finalizacin_de_cursos_Dic 2023.xlsx\", \n",
-    "    \"Solicitudes\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/OneDrive_1_2-14-2024/Desarrollo y talento humano/Selección/Sodimac Colombia - Reporte de solicitudes  20231227.xlsx\", \n",
-    "    \"Vacantes_Totales\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/OneDrive_1_2-14-2024/Desarrollo y talento humano/Selección/reporte_vacantes_totales.xlsx\", \n",
-    "    \"Base_Data\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/OneDrive_1_2-14-2024/Relaciones laborales y SST/Accidentalidad/Base para data 12-2023.xlsx\", \n",
-    "    \"Enfermedades_Colaborales\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/OneDrive_1_2-14-2024/Relaciones laborales y SST/Accidentalidad/ENFERMEDADES LABORALES CONSOLIDADO 12-2023.xlsx\", \n",
-    "    \"Sindicato\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/OneDrive_1_2-14-2024/Relaciones laborales y SST/Sindicatos/INFORMACION SINDICAL.xlsx\" \n",
+    "    \"Retirados\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/Data/Data empleado/12. Empleados Diciembre 2023 Talento.xlsx\", \n",
+    "    \"Auxilios\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/Data/Compensación/Prestamos y Auxilios/Prestamos & Auxilios 2023.xlsx\",  \n",
+    "    \"Prestamos\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/Data/Compensación/Prestamos y Auxilios/Prestamos & Auxilios 2023.xlsx\", \n",
+    "    \"Empleado_Noviembre_2023_Activo\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/Data/Data empleado/11. Empleados Noviembre 2023 Talento.xlsx\", \n",
+    "    \"Empleado_Diciembre_2023_Consolidado\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/Data/Data empleado/12. Empleados Diciembre 2023 Talento.xlsx\", \n",
+    "    \"Empleado_Diciembre_2023_Activo\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/Data/Data empleado/12. Empleados Diciembre 2023 Talento.xlsx\",\n",
+    "    \"Rotacion_Interna_Acumulado\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/Data/Data empleado/ROTACION INTERNA ACUMULADA.xlsx\", \n",
+    "    \"Finalizacion_Curso\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/Data/Desarrollo y talento humano/Formación/finalizacin_de_cursos_Dic 2023.xlsx\", \n",
+    "    \"Solicitudes\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/Data/Desarrollo y talento humano/Selección/Sodimac Colombia - Reporte de solicitudes  20231227.xlsx\", \n",
+    "    \"Vacantes_Totales\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/Data/Desarrollo y talento humano/Selección/reporte_vacantes_totales.xlsx\", \n",
+    "    \"Base_Data\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/Data/Relaciones laborales y SST/Accidentalidad/Base para data 12-2023.xlsx\", \n",
+    "    \"Enfermedades_Colaborales\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/Data/Relaciones laborales y SST/Accidentalidad/ENFERMEDADES LABORALES CONSOLIDADO 12-2023.xlsx\", \n",
+    "    \"Sindicato\": \"C:/Users/Asus/Desktop/SODIMAC/BASE DE DATOS/Data/Relaciones laborales y SST/Sindicatos/INFORMACION SINDICAL.xlsx\" \n",
     "}\n",
     "\n",
     "def read(retirados_url, Auxilios_url, Prestamos_url, Empleado_Noviembre_Activo_url, Empleado_Diciembre_Consolidado_url, Empleado_Diciembre_Activo_url, Rotacion_Interna_Acumulado_url, Finalizacion_Curso_url, Solicitudes_url, Vacantes_Totales_url, Base_Data_url, Enfermedades_Colaborales_url, Sindicato_url):\n",
@@ -127,9 +107,9 @@
     "    rotacion_interna_acomulado  = pd.read_excel(Rotacion_Interna_Acumulado_url, sheet_name=\"INTERNA\")\n",
     "    finalizacio_curso = pd.read_excel(Finalizacion_Curso_url)\n",
     "    solicitudes = pd.read_excel(Solicitudes_url)\n",
-    "    #vacantes_ofertas = pd.read_excel(r\"C:\\Users\\Asus\\Desktop\\SODIMAC\\BASE DE DATOS\\OneDrive_1_2-14-2024\\Desarrollo y talento humano\\Selección\\Sodimac Colombia - Reporte de Vacantes 20231227.xlsx\", sheet_name=\"Ofertas\")\n",
+    "    #vacantes_ofertas = pd.read_excel(r\"C:\\Users\\Asus\\Desktop\\SODIMAC\\BASE DE DATOS\\Data\\Desarrollo y talento humano\\Selección\\Sodimac Colombia - Reporte de Vacantes 20231227.xlsx\", sheet_name=\"Ofertas\")\n",
     "\n",
-    "    #vacantes_contratados = pd.read_excel(r\"C:\\Users\\Asus\\Desktop\\SODIMAC\\BASE DE DATOS\\OneDrive_1_2-14-2024\\Desarrollo y talento humano\\Selección\\Sodimac Colombia - Reporte de Vacantes 20231227.xlsx\", sheet_name=\"Contratados\")\n",
+    "    #vacantes_contratados = pd.read_excel(r\"C:\\Users\\Asus\\Desktop\\SODIMAC\\BASE DE DATOS\\Data\\Desarrollo y talento humano\\Selección\\Sodimac Colombia - Reporte de Vacantes 20231227.xlsx\", sheet_name=\"Contratados\")\n",
     "    vacantes_totales = pd.read_excel(Vacantes_Totales_url,sheet_name=\"27.12.2023\")\n",
     "    basse_data = pd.read_excel(Base_Data_url)\n",
     "    enfermedades_colaborales = pd.read_excel(Enfermedades_Colaborales_url,sheet_name =\"Enfermedades laborales\" )\n",
@@ -446,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +462,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1f5a30d61f0>"
+       "<IPython.lib.display.IFrame at 0x1dd0fc7be20>"
       ]
      },
      "metadata": {},
