Este commit está cómo se quería estructurar el proyecto, no funcionó por scripts separados

--- a/Dash_implementacion.ipynb
+++ b/Dash_implementacion.ipynb
@@ -462,7 +462,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1dd0fc7be20>"
+       "<IPython.lib.display.IFrame at 0x1f03a395d00>"
       ]
      },
      "metadata": {},
