Se añadio el espacio para colocar información de las etiquetas, todavía hace falta llenar el significado de cada una

--- a/Dash_implementacion.ipynb
+++ b/Dash_implementacion.ipynb
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x22ccba8beb0>"
+       "<IPython.lib.display.IFrame at 0x22ccafa91f0>"
       ]
      },
      "metadata": {},
@@ -474,19 +474,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "No hay datos disponibles para ALMACEN BARRANQUILLA SUR.\n",
+      "No hay datos disponibles para ALMACEN BARRANQUILLA SUR.\n",
       "---------------------------------------------------------------------------\n",
       "KeyError                                  Traceback (most recent call last)\n",
       "c:\\Users\\Asus\\anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py in get_loc(\n",
-      "    self=Index(['ABOGADO CONSUMIDOR, PENAL Y CIVIL', 'ABO...,\n",
-      "      dtype='object', name='Cargo', length=415),\n",
-      "    key='ALMACEN BARRANQUILLA CENTRO',\n",
+      "    self=Index(['ALMACEN ARMENIA', 'ALMACEN BARRANQUILLA'...\n",
+      "      dtype='object', name='Centro  de Trabajo'),\n",
+      "    key='CAJERO',\n",
       "    method=None,\n",
       "    tolerance=None\n",
       ")\n",
       "   2894             try:\n",
       "-> 2895                 return self._engine.get_loc(casted_key)\n",
-      "        self._engine.get_loc = <built-in method get_loc of pandas._libs.index.ObjectEngine object at 0x0000022CCA900130>\n",
-      "        casted_key = 'ALMACEN BARRANQUILLA CENTRO'\n",
+      "        self._engine.get_loc = <built-in method get_loc of pandas._libs.index.ObjectEngine object at 0x0000022CC8AA3900>\n",
+      "        casted_key = 'CAJERO'\n",
       "   2896             except KeyError as err:\n",
       "\n",
       "pandas\\_libs\\index.pyx in pandas._libs.index.IndexEngine.get_loc()\n",
@@ -497,22 +499,22 @@
       "\n",
       "pandas\\_libs\\hashtable_class_helper.pxi in pandas._libs.hashtable.PyObjectHashTable.get_item()\n",
       "\n",
-      "KeyError: 'ALMACEN BARRANQUILLA CENTRO'\n",
+      "KeyError: 'CAJERO'\n",
       "\n",
       "The above exception was the direct cause of the following exception:\n",
       "\n",
       "KeyError                                  Traceback (most recent call last)\n",
-      "<ipython-input-26-4cda98ca8f02> in update_graph(\n",
-      "    filtro_1='Cargo',\n",
-      "    filtro_2='ALMACEN BARRANQUILLA CENTRO'\n",
+      "<ipython-input-42-60e9058d1c6d> in update_graph(\n",
+      "    filtro_1='Centro  de Trabajo',\n",
+      "    filtro_2='CAJERO'\n",
       ")\n",
-      "     58         if filtro_1 and filtro_2:\n",
-      "     59             # Suponiendo que 'calculos' es una función definida que procesa los datos\n",
-      "---> 60             datos = calculos(filtro_2, filtro_1, datos_limpios)\n",
+      "     68         if filtro_1 and filtro_2:\n",
+      "     69             # Suponiendo que 'calculos' es una función definida que procesa los datos\n",
+      "---> 70             datos = calculos(filtro_2, filtro_1, datos_limpios)\n",
       "        datos = undefined\n",
       "        global calculos = <function calculos at 0x0000022CC7B873A0>\n",
-      "        filtro_2 = 'ALMACEN BARRANQUILLA CENTRO'\n",
-      "        filtro_1 = 'Cargo'\n",
+      "        filtro_2 = 'CAJERO'\n",
+      "        filtro_1 = 'Centro  de Trabajo'\n",
       "        global datos_limpios = (       Número de Identificación Periodo           Nombre          Apellidos  \\\n",
       "0                      79987996       -        ALEXANDER    AGUIRRE GALEANO   \n",
       "1                      79409997       -      JUAN CARLOS    HERRERA ZULUAGA   \n",
@@ -2026,12 +2028,12 @@
       "447  1073176291   AFILIADO  SINTRAHOMECENTER  DICIEMBRE   2023\n",
       "\n",
       "[448 rows x 5 columns])\n",
-      "     61             df = pd.DataFrame([datos], columns=[\"Sindicato\", 'Incapacidad', 'Product. Incapacidad', 'Educación', 'Auxilios', 'Índice de rotación'])\n",
-      "     62 \n",
+      "     71             df = pd.DataFrame([datos], columns=[\"Sindicato\", 'Incapacidad', 'Product. Incapacidad', 'Educación', 'Auxilios', 'Índice de rotación'])\n",
+      "     72 \n",
       "\n",
       "<ipython-input-4-ebf1f0549a4a> in calculos(\n",
-      "    Filtro='ALMACEN BARRANQUILLA CENTRO',\n",
-      "    nombre_columna='Cargo',\n",
+      "    Filtro='CAJERO',\n",
+      "    nombre_columna='Centro  de Trabajo',\n",
       "    variables=(       Número de Identificación Periodo         ...         SURA E.P.S.  \n",
       "\n",
       "[17913 rows x 23 columns],        AÑO      FECHA          ID TIPO DE BENEFI...        NaN       NaN  \n",
@@ -2157,68 +2159,103 @@
       "\n",
       "[8151 rows x 26 columns]>\n",
       "        nombre_columna.size = undefined\n",
-      "        Filtro = 'ALMACEN BARRANQUILLA CENTRO'\n",
+      "        Filtro = 'CAJERO'\n",
       "     69     tamaño_gerencia\n",
       "     70 \n",
       "\n",
       "c:\\Users\\Asus\\anaconda3\\lib\\site-packages\\pandas\\core\\series.py in __getitem__(\n",
-      "    self=Cargo\n",
-      "ABOGADO CONSUMIDOR, PENAL Y CIVIL       1\n",
-      "...ST                    3\n",
-      "Length: 415, dtype: int64,\n",
-      "    key='ALMACEN BARRANQUILLA CENTRO'\n",
+      "    self=Centro  de Trabajo\n",
+      "ALMACEN ARMENIA              ...OFICINA APOYO A TIENDAS          857\n",
+      "dtype: int64,\n",
+      "    key='CAJERO'\n",
       ")\n",
       "    880 \n",
       "    881         elif key_is_scalar:\n",
       "--> 882             return self._get_value(key)\n",
-      "        self._get_value = <bound method Series._get_value of Cargo\n",
-      "ABOGADO CONSUMIDOR, PENAL Y CIVIL       1\n",
-      "ABOGADO CONTRATOS                       2\n",
-      "ABOGADO DE RELACIONES LABORALES         4\n",
-      "ABOGADO FINANCIERO E INMOBILIARIO       1\n",
-      "ACCOUNT MANAGER                         3\n",
-      "                                     ... \n",
-      "VENDEDOR                             2841\n",
-      "VENDEDOR COMPACTO                      42\n",
-      "VENDEDOR ESPECIALISTA                 126\n",
-      "VENDEDOR ESPECIALISTA COMPACTO          5\n",
-      "WEB BUSINESS ANALYST                    3\n",
-      "Length: 415, dtype: int64>\n",
-      "        key = 'ALMACEN BARRANQUILLA CENTRO'\n",
+      "        self._get_value = <bound method Series._get_value of Centro  de Trabajo\n",
+      "ALMACEN ARMENIA                  139\n",
+      "ALMACEN BARRANQUILLA             222\n",
+      "ALMACEN BARRANQUILLA CENTRO      118\n",
+      "ALMACEN BARRANQUILLA SUR         133\n",
+      "ALMACEN BUCARAMANGA              216\n",
+      "ALMACEN CALI NORTE               232\n",
+      "ALMACEN CALI SUR                 263\n",
+      "ALMACEN CALLE 80                 279\n",
+      "ALMACEN CARTAGENA                196\n",
+      "ALMACEN CARTAGENA2               143\n",
+      "ALMACEN CEDRITOS                 177\n",
+      "ALMACEN CHIA                     202\n",
+      "ALMACEN CUCUTA                   186\n",
+      "ALMACEN DORADO                   224\n",
+      "ALMACEN ENVIGADO                 219\n",
+      "ALMACEN GIRARDOT                 129\n",
+      "ALMACEN IBAGUE                   143\n",
+      "ALMACEN MALLPLAZA NQS            167\n",
+      "ALMACEN MANIZALES                150\n",
+      "ALMACEN MEDELLIN BELLO           156\n",
+      "ALMACEN MEDELLIN INDUSTRIALES    186\n",
+      "ALMACEN MEDELLIN MOLINOS         120\n",
+      "ALMACEN MEDELLIN SAN JUAN        270\n",
+      "ALMACEN MONTERIA                 145\n",
+      "ALMACEN MOSQUERA                 128\n",
+      "ALMACEN NEIVA                    124\n",
+      "ALMACEN NORTE                    207\n",
+      "ALMACEN PALMIRA                  135\n",
+      "ALMACEN PEREIRA                  212\n",
+      "ALMACEN RIONEGRO                 155\n",
+      "ALMACEN SANTA MARTA              165\n",
+      "ALMACEN SINCELEJO                 54\n",
+      "ALMACEN SOACHA                   124\n",
+      "ALMACEN SUBA                     114\n",
+      "ALMACEN SUR                      151\n",
+      "ALMACEN TINTAL                   108\n",
+      "ALMACEN TULUA                    113\n",
+      "ALMACEN TUNJA                    119\n",
+      "ALMACEN VALLEDUPAR               123\n",
+      "ALMACEN VILLAVICENCIO            151\n",
+      "ALMACEN YOPAL                    124\n",
+      "CENTRO DE DISTRIBUCION           572\n",
+      "OFICINA APOYO A TIENDAS          857\n",
+      "dtype: int64>\n",
+      "        key = 'CAJERO'\n",
       "    883 \n",
       "    884         if is_hashable(key):\n",
       "\n",
       "c:\\Users\\Asus\\anaconda3\\lib\\site-packages\\pandas\\core\\series.py in _get_value(\n",
-      "    self=Cargo\n",
-      "ABOGADO CONSUMIDOR, PENAL Y CIVIL       1\n",
-      "...ST                    3\n",
-      "Length: 415, dtype: int64,\n",
-      "    label='ALMACEN BARRANQUILLA CENTRO',\n",
+      "    self=Centro  de Trabajo\n",
+      "ALMACEN ARMENIA              ...OFICINA APOYO A TIENDAS          857\n",
+      "dtype: int64,\n",
+      "    label='CAJERO',\n",
       "    takeable=False\n",
       ")\n",
       "    987 \n",
       "    988         # Similar to Index.get_value, but we do not fall back to positional\n",
       "--> 989         loc = self.index.get_loc(label)\n",
       "        loc = undefined\n",
-      "        self.index.get_loc = <bound method Index.get_loc of Index(['ABOGADO CONSUMIDOR, PENAL Y CIVIL', 'ABOGADO CONTRATOS',\n",
-      "       'ABOGADO DE RELACIONES LABORALES', 'ABOGADO FINANCIERO E INMOBILIARIO',\n",
-      "       'ACCOUNT MANAGER', 'ADMINISTRADOR APLICACIONES LOGISTICAS',\n",
-      "       'ADMINISTRADOR CONTRATOS DE SERVICIOS', 'ADMINISTRADOR DE APLICACIONES',\n",
-      "       'ADMINISTRADOR PORTAL DE SERVICIOS', 'ANALISTA ABASTECIMIENTO',\n",
-      "       ...\n",
-      "       'TECNICO AUTOMATIZACION CEDIS', 'TECNICO MANTENIMIENTO',\n",
-      "       'TECNICO MANTENIMIENTO CEDIS', 'UX/UI DESIGNER', 'UX/UI LEADER',\n",
-      "       'VENDEDOR', 'VENDEDOR COMPACTO', 'VENDEDOR ESPECIALISTA',\n",
-      "       'VENDEDOR ESPECIALISTA COMPACTO', 'WEB BUSINESS ANALYST'],\n",
-      "      dtype='object', name='Cargo', length=415)>\n",
-      "        label = 'ALMACEN BARRANQUILLA CENTRO'\n",
+      "        self.index.get_loc = <bound method Index.get_loc of Index(['ALMACEN ARMENIA', 'ALMACEN BARRANQUILLA',\n",
+      "       'ALMACEN BARRANQUILLA CENTRO', 'ALMACEN BARRANQUILLA SUR',\n",
+      "       'ALMACEN BUCARAMANGA', 'ALMACEN CALI NORTE', 'ALMACEN CALI SUR',\n",
+      "       'ALMACEN CALLE 80', 'ALMACEN CARTAGENA', 'ALMACEN CARTAGENA2',\n",
+      "       'ALMACEN CEDRITOS', 'ALMACEN CHIA', 'ALMACEN CUCUTA', 'ALMACEN DORADO',\n",
+      "       'ALMACEN ENVIGADO', 'ALMACEN GIRARDOT', 'ALMACEN IBAGUE',\n",
+      "       'ALMACEN MALLPLAZA NQS', 'ALMACEN MANIZALES', 'ALMACEN MEDELLIN BELLO',\n",
+      "       'ALMACEN MEDELLIN INDUSTRIALES', 'ALMACEN MEDELLIN MOLINOS',\n",
+      "       'ALMACEN MEDELLIN SAN JUAN', 'ALMACEN MONTERIA', 'ALMACEN MOSQUERA',\n",
+      "       'ALMACEN NEIVA', 'ALMACEN NORTE', 'ALMACEN PALMIRA', 'ALMACEN PEREIRA',\n",
+      "       'ALMACEN RIONEGRO', 'ALMACEN SANTA MARTA', 'ALMACEN SINCELEJO',\n",
+      "       'ALMACEN SOACHA', 'ALMACEN SUBA', 'ALMACEN SUR', 'ALMACEN TINTAL',\n",
+      "       'ALMACEN TULUA', 'ALMACEN TUNJA', 'ALMACEN VALLEDUPAR',\n",
+      "       'ALMACEN VILLAVICENCIO', 'ALMACEN YOPAL', 'CENTRO DE DISTRIBUCION',\n",
+      "       'OFICINA APOYO A TIENDAS'],\n",
+      "      dtype='object', name='Centro  de Trabajo')>\n",
+      "        label = 'CAJERO'\n",
       "    990         return self.index._get_values_for_loc(self, loc, label)\n",
       "    991 \n",
       "\n",
       "c:\\Users\\Asus\\anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py in get_loc(\n",
-      "    self=Index(['ABOGADO CONSUMIDOR, PENAL Y CIVIL', 'ABO...,\n",
-      "      dtype='object', name='Cargo', length=415),\n",
-      "    key='ALMACEN BARRANQUILLA CENTRO',\n",
+      "    self=Index(['ALMACEN ARMENIA', 'ALMACEN BARRANQUILLA'...\n",
+      "      dtype='object', name='Centro  de Trabajo'),\n",
+      "    key='CAJERO',\n",
       "    method=None,\n",
       "    tolerance=None\n",
       ")\n",
@@ -2226,15 +2263,15 @@
       "   2896             except KeyError as err:\n",
       "-> 2897                 raise KeyError(key) from err\n",
       "        global KeyError = undefined\n",
-      "        key = 'ALMACEN BARRANQUILLA CENTRO'\n",
+      "        key = 'CAJERO'\n",
       "        err = undefined\n",
       "   2898 \n",
       "   2899         if tolerance is not None:\n",
       "\n",
-      "KeyError: 'ALMACEN BARRANQUILLA CENTRO'\n",
+      "KeyError: 'CAJERO'\n",
       "\n",
-      "No hay datos disponibles para AUXILIAR POSVENTA.\n",
-      "No hay datos disponibles para AUXILIAR POSVENTA.\n"
+      "No hay datos disponibles para ALMACEN BARRANQUILLA SUR.\n",
+      "No hay datos disponibles para ALMACEN BARRANQUILLA SUR.\n"
      ]
     }
    ],
@@ -2277,7 +2314,17 @@
     "                    value=opciones_1[0]\n",
     "                ),\n",
     "                dcc.Dropdown(id='filtro-dropdown-2'),\n",
-    "                html.Div(dcc.Graph(id='grafico-radial'), style={'display': 'flex', 'justify-content': 'center'})\n",
+    "                html.Div([\n",
+    "                    dcc.Graph(id='grafico-radial'),\n",
+    "                    html.Div([\n",
+    "                        html.P(\"- Sindicato: dadasdada\", style={'display': 'block'}),\n",
+    "                        html.P(\"- Incapacidad: dsfsdfs\", style={'display': 'block'}),\n",
+    "                        html.P(\"- Prod. incapacidad: dsfsdfs\", style={'display': 'block'}),\n",
+    "                        html.P(\"- Educación: dsfsdcfs\", style={'display': 'block'}),\n",
+    "                        html.P(\"- Auxilios: dsfsdfss\", style={'display': 'block'}),\n",
+    "                        html.P(\"- índice rotación: dssfsdfs\", style={'display': 'block'})\n",
+    "                    ], style={'margin-top': '20px', 'text-align': 'center', 'line-height': '1.5'})\n",
+    "                ], style={'display': 'flex', 'flex-direction': 'column', 'align-items': 'center'})\n",
     "            ])\n",
     "        return html.Div()  # Agregar un valor de retorno para 'tab-1' o contenido predeterminado\n",
     "\n",
