Impr : Se arreglo el README

--- a/Dash_implementacion.ipynb
+++ b/Dash_implementacion.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -427,22 +427,11 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x28ca8cf0a70>"
+       "<IPython.lib.display.IFrame at 0x28ca8f5aab0>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No hay datos disponibles para AUXILIAR CORTE Y DIMENSIONADO.\n",
-      "No hay datos disponibles para EMPACADOR.\n",
-      "No hay datos disponibles para EMPACADOR.\n",
-      "No hay datos disponibles para EMPACADOR.\n",
-      "No hay datos disponibles para EMPACADOR.\n"
-     ]
     }
    ],
    "source": [
